[gd_scene load_steps=28 format=3 uid="uid://bdmppjpfodq7j"]

[ext_resource type="PackedScene" uid="uid://btmmhcglgp64n" path="res://Scenes/Planet1.tscn" id="1_tx5vb"]
[ext_resource type="Script" path="res://Scripts/GameManager.gd" id="1_vpq13"]
[ext_resource type="Script" path="res://Scripts/Spaceship.gd" id="2_anbfd"]
[ext_resource type="PackedScene" uid="uid://cek487f24avmw" path="res://Scenes/spaceship.tscn" id="2_wh45f"]
[ext_resource type="PackedScene" uid="uid://y8jq1mps054j" path="res://Scenes/Earth.tscn" id="3_7ex4b"]
[ext_resource type="PackedScene" uid="uid://dp6smdq8x17kg" path="res://Scenes/DeathWall.tscn" id="4_c0wpf"]
[ext_resource type="Script" path="res://Scenes/TimeCount.gd" id="8_ngh32"]
[ext_resource type="PackedScene" uid="uid://dftml8jyodeb" path="res://Scenes/Background.tscn" id="8_nk0yu"]
[ext_resource type="PackedScene" uid="uid://cp7ghsqhtfsnu" path="res://Scenes/shield.tscn" id="8_qb8qs"]
[ext_resource type="PackedScene" uid="uid://dnprg3wvkod85" path="res://Scenes/Meteor.tscn" id="9_lceoo"]
[ext_resource type="PackedScene" uid="uid://dmupes8gps0ij" path="res://Scenes/PauseMenu.tscn" id="11_feymk"]
[ext_resource type="Script" path="res://Scripts/ButtonManager.gd" id="12_3kma4"]
[ext_resource type="Script" path="res://Scripts/FirebaseSettings.gd" id="13_djwbg"]
[ext_resource type="Script" path="res://Scripts/StateMachine/StateMachine.gd" id="14_0jcd5"]
[ext_resource type="Script" path="res://Scripts/StateMachine/DifficultyState1.gd" id="15_1hgr0"]
[ext_resource type="Script" path="res://Scripts/StateMachine/DifficultyState2.gd" id="16_nucjy"]
[ext_resource type="Script" path="res://Scripts/StateMachine/DifficultyState3.gd" id="17_pqtlj"]
[ext_resource type="Script" path="res://Scripts/StateMachine/DifficultyState4.gd" id="18_gtcsy"]
[ext_resource type="Script" path="res://Scripts/StateMachine/DifficultyState5.gd" id="19_iwv6a"]
[ext_resource type="Script" path="res://Scripts/PlanetManager.gd" id="20_m6ub6"]
[ext_resource type="Shader" path="res://Scripts/Procedural Generation/P_shader.gdshader" id="21_vjlt4"]
[ext_resource type="Script" path="res://Scripts/Procedural Generation/P_Placeholder.gd" id="22_qe8qy"]
[ext_resource type="Texture2D" uid="uid://c7fkhu1wi2jwa" path="res://Scripts/Procedural Generation/images.png" id="23_7ojrm"]
[ext_resource type="PackedScene" uid="uid://dllbb8xydjhwn" path="res://Scenes/experiment.tscn" id="24_tbkwg"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_kova2"]
seed = 20
frequency = 0.0245

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_7csns"]
noise = SubResource("FastNoiseLite_kova2")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k5hg4"]
shader = ExtResource("21_vjlt4")
shader_parameter/planet_center = Vector2(128, 128)
shader_parameter/planet_radius = 100.0
shader_parameter/ocean_color = Color(0.428714, 0.20161, 0.171786, 1)
shader_parameter/land_color = Color(0.343644, 0.268808, 0.434178, 1)
shader_parameter/noise_texture = SubResource("NoiseTexture2D_7csns")

[node name="Game" type="Node2D" node_paths=PackedStringArray("timer")]
script = ExtResource("1_vpq13")
falling_object_scene = ExtResource("1_tx5vb")
meteor = ExtResource("9_lceoo")
timer = NodePath("Timer")

[node name="Background" parent="." instance=ExtResource("8_nk0yu")]
position = Vector2(10, -1545)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1, -4)

[node name="Planet" parent="." instance=ExtResource("1_tx5vb")]
position = Vector2(-849, 101)
scale = Vector2(0.06, 0.06)

[node name="DeathWall" parent="." instance=ExtResource("4_c0wpf")]
position = Vector2(-538.99, -963.08)

[node name="Earth" parent="." instance=ExtResource("3_7ex4b")]
position = Vector2(0, -4)

[node name="TheSpaceship" parent="Earth" groups=["spaceships"] instance=ExtResource("2_wh45f")]
position = Vector2(0, -1525)
scale = Vector2(33.3333, 33.3333)
script = ExtResource("2_anbfd")

[node name="ShieldTimer" type="Timer" parent="Earth/TheSpaceship"]
one_shot = true

[node name="Shield" parent="Earth/TheSpaceship" instance=ExtResource("8_qb8qs")]
visible = false

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="GameHUD" type="Control" parent="."]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -539.0
offset_top = -965.0
offset_right = 541.0
offset_bottom = 955.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Timer" type="ColorRect" parent="GameHUD"]
layout_mode = 0
offset_left = 88.0
offset_top = 129.0
offset_right = 317.0
offset_bottom = 207.0
color = Color(1, 1, 1, 0.407843)

[node name="RichTextLabel" type="RichTextLabel" parent="GameHUD/Timer" node_paths=PackedStringArray("FirebaseManager", "StateManager")]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -13.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
text = "Hello There General Kenobi"
script = ExtResource("8_ngh32")
FirebaseManager = NodePath("../../../FirebaseManager")
StateManager = NodePath("../../../StateManager")

[node name="Points" type="ColorRect" parent="GameHUD"]
layout_mode = 0
offset_left = 759.0
offset_top = 124.0
offset_right = 988.0
offset_bottom = 202.0
color = Color(1, 1, 1, 0.372549)

[node name="RichTextLabel" type="RichTextLabel" parent="GameHUD/Points"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Hello There General Kenobi"

[node name="ActivateShieldButton" type="Button" parent="GameHUD"]
layout_mode = 0
offset_left = 873.0
offset_top = 1583.0
offset_right = 881.0
offset_bottom = 1591.0
focus_mode = 0
text = "Activate Shield"

[node name="Settings" type="Button" parent="GameHUD"]
layout_mode = 0
offset_left = 617.0
offset_top = 1583.0
offset_right = 739.0
offset_bottom = 1614.0
focus_mode = 0
text = "Settings
"

[node name="Booster" type="Button" parent="GameHUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -409.0
offset_top = -340.0
offset_right = -340.0
offset_bottom = -309.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
text = "Booster"

[node name="PauseMenu" parent="." instance=ExtResource("11_feymk")]
visible = false
z_index = 1

[node name="GameOverScreen" type="Control" parent="."]
visible = false
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -539.0
offset_top = -965.0
offset_right = 541.0
offset_bottom = 955.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="GameOverScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="GameOverScreen/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -286.0
offset_top = -343.0
offset_right = 285.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.384314, 0.384314, 0.772549)

[node name="RichTextLabel" type="RichTextLabel" parent="GameOverScreen/Panel/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -20.0
offset_right = 50.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"

[node name="Button" type="Button" parent="GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = 25.0
offset_right = 48.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
text = "Main Menu"

[node name="ButtonManager" type="Node2D" parent="." node_paths=PackedStringArray("spaceship", "pauseMenu", "ActivateShieldButton", "SettingsButton")]
script = ExtResource("12_3kma4")
spaceship = NodePath("../Earth/TheSpaceship")
pauseMenu = NodePath("../PauseMenu")
ActivateShieldButton = NodePath("../GameHUD/ActivateShieldButton")
SettingsButton = NodePath("../GameHUD/Settings")

[node name="FirebaseManager" type="Node2D" parent="."]
script = ExtResource("13_djwbg")

[node name="StateManager" type="Node2D" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("14_0jcd5")
initial_state = NodePath("Difficulty1")

[node name="Difficulty1" type="Node2D" parent="StateManager" node_paths=PackedStringArray("gameManager")]
script = ExtResource("15_1hgr0")
next_state = "Difficulty2"
gameManager = NodePath("../..")
r_speed = 100
d_speed = 100

[node name="Difficulty2" type="Node2D" parent="StateManager" node_paths=PackedStringArray("gameManager")]
script = ExtResource("16_nucjy")
next_state = "Difficulty3"
gameManager = NodePath("../..")
r_speed = 105
d_speed = 150

[node name="Difficulty3" type="Node2D" parent="StateManager" node_paths=PackedStringArray("gameManager")]
script = ExtResource("17_pqtlj")
next_state = "Difficulty4"
gameManager = NodePath("../..")
r_speed = 110
d_speed = 200

[node name="Difficulty4" type="Node2D" parent="StateManager" node_paths=PackedStringArray("gameManager")]
script = ExtResource("18_gtcsy")
next_state = "Difficulty5"
gameManager = NodePath("../..")
r_speed = 115
d_speed = 250

[node name="Difficulty5" type="Node2D" parent="StateManager" node_paths=PackedStringArray("gameManager")]
script = ExtResource("19_iwv6a")
gameManager = NodePath("../..")
r_speed = 120
d_speed = 300

[node name="PlanetManager" type="Node2D" parent="." node_paths=PackedStringArray("game_Manager")]
position = Vector2(-1080, -1080)
script = ExtResource("20_m6ub6")
game_Manager = NodePath("..")

[node name="PlanetNode" type="Node2D" parent="."]
visible = false
script = ExtResource("22_qe8qy")

[node name="P" type="Sprite2D" parent="PlanetNode"]
z_index = 1
material = SubResource("ShaderMaterial_k5hg4")
position = Vector2(-416, -852)
texture = ExtResource("23_7ojrm")

[node name="Experiment" parent="." instance=ExtResource("24_tbkwg")]
position = Vector2(-517, -968)

[connection signal="child_exiting_tree" from="Earth" to="Earth" method="on_spaceship_exit"]
[connection signal="timeout" from="Earth/TheSpaceship/ShieldTimer" to="Earth/TheSpaceship" method="deactivate_Shield"]
[connection signal="pressed" from="GameHUD/Booster" to="." method="Use_Boosters"]
[connection signal="pressed" from="GameOverScreen/Button" to="." method="Goto_MainMenu"]
